--- a/WebBookEventManager/Content/Site.css
+++ b/WebBookEventManager/Content/Site.css
@@ -22,3 +22,17 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.required::after {
+    content: " *";
+    font-weight: bold;
+    color: red;
+}
+
+.field-validation-error {
+    color: red;
+}
+
+.input-validation-error {
+    border: 1px solid red;
+}
