--- a/WebBookEventManager/Views/Shared/_Layout.cshtml
+++ b/WebBookEventManager/Views/Shared/_Layout.cshtml
@@ -22,9 +22,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Invited Events", "Invited")</li>
+                        <li>@Html.ActionLink("Manage Events", "Manage")</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
