--- a/WebBookEventManager/Views/Shared/_Layout.cshtml
+++ b/WebBookEventManager/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                         <li>@Html.ActionLink("Invited Events", "Invited")</li>
                         <li>@Html.ActionLink("Manage Events", "Manage")</li>
                     }
+                    <li>@Html.ActionLink("Add Event", "Create", "Events")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
