--- a/WebBookEventManager/Views/Shared/_CommentRow.cshtml
+++ b/WebBookEventManager/Views/Shared/_CommentRow.cshtml
@@ -1,13 +1,17 @@
-﻿@model DTO.Comment.CommentDto
+﻿@model WebBookEventManager.ViewModels.CommentViewModel
+
+@{
+    var m = Model;
+}
 
 <div class="d-flex flex-row comment-row m-t-0 rounded">
     <div class="comment-text w-100">
         <h6 class="font-medium"></h6>
-        <span class="m-b-15">@Model.Comment</span><span class="text-muted float-right">April 14, 2019</span>
-        
+        <span>@Model.Username</span><span class="text-muted text-right">@Model.Date.ToShortDateString()</span>
+
         <div class="comment-footer">
 
-
+            @Model.Comment
         </div>
     </div>
 </div> <!-- Comment Row -->
