--- a/WebBookEventManager/Views/Events/Invited.cshtml
+++ b/WebBookEventManager/Views/Events/Invited.cshtml
@@ -1,18 +1,60 @@
-﻿@model IEnumerable<DTO.Events.EventDto>
+﻿@using Microsoft.AspNet.Identity;
+@model IEnumerable<DTO.Events.EventDto>
+
 @{
     ViewBag.Title = "Invited";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2></h2>
 
-<div class="row">
+<table class="table table-striped table-bordered" id="invited-events">
+    <thead>
+        <tr>
+            <th>Event</th>
+            <th>Type</th>
+            <th>Time</th>
+            <th>Date</th>
+        </tr>
+    </thead>
+    <tbody></tbody>
+</table>
 
+@section scripts{
 
-    @{
-        foreach (var evnt in Model)
-        {
-            Html.RenderPartial("_EventCard", evnt);
-        }
-    }
-</div>
+    <script>
+        $(document).ready(function () {
+            $('#invited-events').DataTable({
+                ajax: {
+                    url: '/api/events/user/invited/@User.Identity.GetUserId()',
+                    dataSrc: '',
+                },
+                columns: [
+                    {
+                        data: "title",
+                        render: (data, type, model) => {
+                            return `<a href='/events/detail/${model.id}'>${data}</a>`
+                        }
+                    },
+
+                    {
+                        data: 'type',
+                        render: (data) => {
+                            return data === 0 ? 'Public' : 'Private'
+                        }
+                    },
+                    {
+                        data: 'startTime',
+
+                    },
+                    {
+                        data: 'date',
+                        render: (date) => {
+                            return new Date(date).toLocaleDateString();
+                        }
+                    }
+                ]
+            })
+        })
+    </script>
+}
